--- a/backmatter.tex
+++ b/backmatter.tex
@@ -10,6 +10,23 @@
 %\listoffigures
 %\listoftables
 
+\Chapter*{List of Acronyms}
+\addcontentsline{toc}{chapter}{List of Acronyms}
+\begin{acronym}[CERN]
+\acro{MC}[MC]{Monte Carlo}
+\acro{CMS}[CMS]{Compact Muon Solenoid}
+\acro{LHC}[LHC]{Large Hadron Colider}
+\acro{CERN}[CERN]{the European Organisation for Nuclear Research }
+\acro{PS}[PS]{Proton Synchrotron}
+\acro{SPS}[SPS]{Super Proton Synchrotron}
+\acro{PSB}[PSB]{Proton Synchrotron Booster}
+\acro{LS1}[LS1]{Long Shutdown 1}
+\acro{MSSM}[MSSM]{Minimal Supersymmetric standard model}
+\acro{SUSY}[SUSY]{Supersymmetry}
+\acro{2HDM}[2HDM]{Two Higgs Doublet Model}
+\end{acronym}
+
+
 %% If you have time and interest to generate a (decent) index,
 %% then you've clearly spent more time on the write-up than the 
 %% research ;-)
