--- a/preamble.tex
+++ b/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{morefloats,subfig,afterpage}
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
+\usepackage[printonlyused,withpage]{acronym}
 \usepackage[parfill]{parskip}
 
 %% Using Babel allows other languages to be used and mixed-in easily
@@ -83,3 +84,4 @@
 \newcommand{\mT}{$m_{\text{T}}$}
 \newcommand{\MET}{$E_{\text{T}}^{\text{miss}}$}
 \DeclareRobustCommand{\protonproton}{\Pproton\Pproton\xspace}
+
